2020-06-02 Franz Holzinger <franz@ttproducts.de>
    * upgrade to PhpSpreadsheet-1.13.0. See the file Vendor/version.txt .

2018-12-29 Franz Holzinger <franz@ttproducts.de>
    * initial creation based on PhpSpreadsheet-1.3.1. See the file Vendor/version.txt .
